@@ -355,102 +355,6 @@ bool RenderObject::isEditable() const
         (textRenderer && textRenderer->firstTextBox()));
 }
 
-RenderObject* RenderObject::nextEditable() const
-{
-    RenderObject* r = const_cast<RenderObject*>(this);
-    RenderObject* n = firstChild();
-    if (n) {
-        while (n) {
-            r = n;
-            n = n->firstChild();
-        }
-        if (r->isEditable())
-            return r;
-        else
-            return r->nextEditable();
-    }
-    n = r->nextSibling();
-    if (n) {
-        r = n;
-        while (n) {
-            r = n;
-            n = n->firstChild();
-        }
-        if (r->isEditable())
-            return r;
-        else
-            return r->nextEditable();
-    }
-    n = r->parent();
-    while (n) {
-        r = n;
-        n = r->nextSibling();
-        if (n) {
-            r = n;
-            n = r->firstChild();
-            while (n) {
-                r = n;
-                n = n->firstChild();
-            }
-            if (r->isEditable())
-                return r;
-            else
-                return r->nextEditable();
-        }
-        n = r->parent();
-    }
-
-    return 0;
-}
-
-RenderObject* RenderObject::previousEditable() const
-{
-    RenderObject* r = const_cast<RenderObject*>(this);
-    RenderObject* n = firstChild();
-    if (n) {
-        while (n) {
-            r = n;
-            n = n->lastChild();
-        }
-        if (r->isEditable())
-            return r;
-        else
-            return r->previousEditable();
-    }
-    n = r->previousSibling();
-    if (n) {
-        r = n;
-        while (n) {
-            r = n;
-            n = n->lastChild();
-        }
-        if (r->isEditable())
-            return r;
-        else
-            return r->previousEditable();
-    }
-    n = r->parent();
-    while (n) {
-        r = n;
-        n = r->previousSibling();
-        if (n) {
-            r = n;
-            n = r->lastChild();
-            while (n) {
-                r = n;
-                n = n->lastChild();
-            }
-            if (r->isEditable())
-                return r;
-            else
-                return r->previousEditable();
-        }
-        n = r->parent();
-    }
-
-    return 0;
-}
-
 RenderObject* RenderObject::firstLeafChild() const
 {
     RenderObject* r = firstChild();
